--- a/MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono4/MarcelJoachimKloubert.CLRToolbox.Mono4.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono4/MarcelJoachimKloubert.CLRToolbox.Mono4.csproj
@@ -1513,6 +1513,24 @@
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Execution\Workflows\SimpleWorkflowExecutionContext.cs">
       <Link>Execution\Workflows\SimpleWorkflowExecutionContext.cs</Link>
     </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Execution\IAsyncExecutionResult.cs">
+      <Link>Execution\IAsyncExecutionResult.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Execution\SimpleAsyncExecutionResult.cs">
+      <Link>Execution\SimpleAsyncExecutionResult.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\ExecutionHelper.cs">
+      <Link>Helpers\ExecutionHelper.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\ExecutionHelper.MakeAsync.cs">
+      <Link>Helpers\ExecutionHelper.MakeAsync.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Execution.cs">
+      <Link>Extensions\Execution.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Execution.MakeAsync.cs">
+      <Link>Extensions\Execution.MakeAsync.cs</Link>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
