--- a/MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/MarcelJoachimKloubert.CLRToolbox.XNA.40.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/MarcelJoachimKloubert.CLRToolbox.XNA.40.csproj
@@ -338,11 +338,17 @@
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Execution\Functions\IFunctionLocator.cs">
       <Link>Execution\Functions\IFunctionLocator.cs</Link>
     </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Execution\IAsyncExecutionResult.cs">
+      <Link>Execution\IAsyncExecutionResult.cs</Link>
+    </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Execution\ICommand.cs">
       <Link>Execution\ICommand.cs</Link>
     </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Execution\Impl\DelegateCommand.cs">
       <Link>Execution\Impl\DelegateCommand.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Execution\SimpleAsyncExecutionResult.cs">
+      <Link>Execution\SimpleAsyncExecutionResult.cs</Link>
     </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Execution\Workflows\DelegateWorkflow.cs">
       <Link>Execution\Workflows\DelegateWorkflow.cs</Link>
@@ -507,6 +513,13 @@
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\EnumHelper.TryParse.cs">
       <Link>Helpers\EnumHelper.TryParse.cs</Link>
       <DependentUpon>EnumHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\ExecutionHelper.cs">
+      <Link>Helpers\ExecutionHelper.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\ExecutionHelper.MakeAsync.cs">
+      <Link>Helpers\ExecutionHelper.MakeAsync.cs</Link>
+      <DependentUpon>ExecutionHelper.cs</DependentUpon>
     </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\IOHelper.CopyTo.cs">
       <Link>Helpers\IOHelper.CopyTo.cs</Link>
@@ -1105,6 +1118,13 @@
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Collections.ToEnumerableSafe.cs">
       <Link>Extensions\Collections.ToEnumerableSafe.cs</Link>
       <DependentUpon>Collections.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Execution.cs">
+      <Link>Extensions\Execution.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Execution.MakeAsync.cs">
+      <Link>Extensions\Execution.MakeAsync.cs</Link>
+      <DependentUpon>Execution.cs</DependentUpon>
     </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\IO.CreateDirectoryDeep.cs">
       <Link>Extensions\IO.CreateDirectoryDeep.cs</Link>
