--- a/MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono4/MarcelJoachimKloubert.CLRToolbox.Mono4.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono4/MarcelJoachimKloubert.CLRToolbox.Mono4.csproj
@@ -1534,6 +1534,36 @@
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Execution\Workflows\WorkflowBase.cs">
       <Link>Execution\Workflows\WorkflowBase.cs</Link>
     </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\ReflectionHelper.cs">
+      <Link>Helpers\ReflectionHelper.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\ReflectionHelper.GetExplicitOperators.cs">
+      <Link>Helpers\ReflectionHelper.GetExplicitOperators.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\ReflectionHelper.GetImplicitOperators.cs">
+      <Link>Helpers\ReflectionHelper.GetImplicitOperators.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Reflection.cs">
+      <Link>Extensions\Reflection.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Reflection.GetExplicitOperators.cs">
+      <Link>Extensions\Reflection.GetExplicitOperators.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Reflection.GetImplicitOperators.cs">
+      <Link>Extensions\Reflection.GetImplicitOperators.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.Concat.cs">
+      <Link>Helpers\CollectionHelper.Concat.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Diagnostics\Tests\Assert.AreSame.cs">
+      <Link>Diagnostics\Tests\Assert.AreSame.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Diagnostics\Tests\Assert.cs">
+      <Link>Diagnostics\Tests\Assert.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Diagnostics\Tests\AssertException.cs">
+      <Link>Diagnostics\Tests\AssertException.cs</Link>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -1564,5 +1594,6 @@
     <Folder Include="Diagnostics\Remoting\" />
     <Folder Include="_Embedded\" />
     <Folder Include="Execution\Workflows\" />
+    <Folder Include="Diagnostics\Tests\" />
   </ItemGroup>
 </Project>
