delegates, NotificationObjectBase and cleanups
- ADD: System.Func delegates for compatibility reasons
- ADD: easier way to handle property changes by using internal
dictionary instead of separate fields
- ADD: ReceiveNotificationFromAttribute that can be used to
automatically raise property change events for a marked property if
property change events of other events were raised
- CHG: moved all parts of NotificationObjectBase class to one single
file
- CHG: code cleanups

--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -79,16 +79,9 @@
     <Compile Include="ComponentModel\INotificationObject.INotifyPropertyChanging.cs">
       <DependentUpon>INotificationObject.cs</DependentUpon>
     </Compile>
-    <Compile Include="ComponentModel\NotificationObjectBase.Tag.cs">
-      <DependentUpon>NotificationObjectBase.cs</DependentUpon>
-    </Compile>
     <Compile Include="ComponentModel\NotificationObjectBase.cs" />
-    <Compile Include="ComponentModel\NotificationObjectBase.PropertyChange.cs">
-      <DependentUpon>NotificationObjectBase.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ComponentModel\NotificationObjectBase.PropertyChanging.cs">
-      <DependentUpon>NotificationObjectBase.cs</DependentUpon>
-    </Compile>
+    <Compile Include="ComponentModel\ReceiveNotificationFromAttribute.cs" />
+    <Compile Include="ComponentModel\ReceiveNotificationFromOptions.cs" />
     <Compile Include="Configuration\ConfigRepositoryBase.cs" />
     <Compile Include="Configuration\IConfigRepository.cs" />
     <Compile Include="Configuration\Impl\KeyValuePairConfigRepository.cs" />
